--- a/src/App.css
+++ b/src/App.css
@@ -2,41 +2,6 @@
     text-align: center;
 }
 
-.App-logo {
-    height: 40vmin;
-    pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-    .App-logo {
-        animation: App-logo-spin infinite 20s linear;
-    }
-}
-
-.App-header {
-    background-color: #282c34;
-    min-height: 100vh;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    font-size: calc(10px + 2vmin);
-    color: white;
-}
-
-.App-link {
-    color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-    from {
-        transform: rotate(0deg);
-    }
-    to {
-        transform: rotate(360deg);
-    }
-}
-
 
 /* COin Flip */
 
@@ -175,5 +140,67 @@
     }
     100% {
         opacity: 1;
+    }
+}
+
+.loading-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.loading {
+    display: flex;
+    flex-direction: row;
+}
+
+.loading__letter {
+    animation-name: bounce;
+    animation-duration: 2s;
+    animation-iteration-count: infinite;
+}
+
+@keyframes bounce {
+    0% {
+        transform: translateY(0px);
+    }
+    40% {
+        transform: translateY(-5px);
+    }
+    80%,
+    100% {
+        transform: translateY(0px);
+    }
+}
+
+.chat {
+    width: 300px;
+    overflow: hidden;
+    position: absolute;
+    top: 140px;
+    right: 25px;
+}
+
+.slideshow img {
+    animation-name: slideLeft;
+    animation-duration: 30s;
+    animation-iteration-count: infinite;
+}
+
+@keyframes slideLeft {
+    0% {
+        transform: translateX(0px);
+    }
+    25% {
+        transform: translateX(0px);
+    }
+    50% {
+        transform: translateX(-800px);
+    }
+    75% {
+        transform: translateX(-800px);
+    }
+    100% {
+        transform: translateX(0px);
     }
 }
